# last-minute

./: .gitignore  package-lock.json  package.json  storage.toml  tsconfig.json  vite.config.ts
design/: 0-map.aseprite  grass and ground tiles.aseprite  ground map.aseprite
design/character/: demo.aseprite
design/enemies/: demo.aseprite
design/sprites/: c-demo.aseprite  ground.aseprite
notes/.obsidian/: workspace.json
packs/: bcms-client.tgz
public/game/map/: 0-ground-map.aseprite
scripts/: pull-bcms.cjs  pull-bcms.ts
src/: _router.tsx  app.tsx  main.ts  router.ts  screen.tsx  storage.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  storage.rs
src-tauri/src/com/: mod.rs  player.rs
src-tauri/src/game/: bounding_box.rs  collision.rs  consts.rs  enemy.rs  math.rs  mod.rs  object.rs  on_tick.rs  player.rs  projectile.rs  store.rs  weapon.rs
src/components/: _default.ts  button.tsx  index.ts  link.tsx
src/components/icons/: alert-circle.tsx  index.ts
src/components/inputs/: input.tsx  wrapper.tsx
src/data/: ground.ts
src/db/: handler.ts  index.ts  main.ts
src/db/models/: _model.ts  account.ts
src/game/: bcms.ts  camera.ts  chunk.ts  consts.ts  enemy.ts  keyboard.ts  layers.ts  main.ts  map.ts  mouse.ts  player.ts  ticker.ts
src/game/enemy/: main.ts
src/game/math/: bb.ts  function-builder.ts  index.ts  point.ts  util.ts  vector.ts
src/game/shaders/: demo.frag  demo.vert  l4.frag  (+1 more)
src/styles/: _main.scss  _reset.scss
src/util/: validation.ts
src/views/: account.tsx  game.tsx  home.tsx  index.ts  new-account.tsx
(+5 files in other folders)
